@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.122 2007-10-09 00:23:52 remko Exp $
+	$Id: ChangeLog,v 1.123 2007-10-09 21:14:57 remko Exp $
 -----------------------------------------------------------------------------------------
 
 -----------------------------------------------------------------------------------------
@@ -8,6 +8,7 @@
 -----------------------------------------------------------------------------------------
 
 2007-10-09	remko
+	* pslib.c:		Enclose EPS inclusion between %%BeginDocument: and %%EndDocument
 	* install-sh:		Replaced version from 1991 with one from 2004 that can install
 				multiple files at a time.
 
